@@ -18,6 +18,7 @@ The following bugs are resolved with this release:
   [18435] pthread_once hangs when init routine throws an exception
   [23462] Static binary with dynamic string tokens ($LIB, $PLATFORM, $ORIGIN)
     crashes
+  [27304] pthread_cond_destroy does not pass private flag to futex system calls
   [27577] elf/ld.so --help doesn't work
 
 Version 2.33
